[package]
name = "spotify-history-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
eyre = "0.6.8"
color-eyre = "0.6.2"
tracing = "0.1.36"
